--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -1,12 +1,8 @@
-; Engine configuration file.
-; It's best to edit using the editor UI, not directly,
-; becausethe parameters that go here are not obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
+
 name="XNA Rpg"
 icon="res://icon.png"
+
+[editor_plugins]
+
+enabled=["spritefont_importer"]
