Start main menu scene
Add the background images and description label.

--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -1,8 +1,24 @@
 [application]
 
 name="XNA Rpg"
+main_scene="res://menus/main_menu.tscn"
 icon="res://icon.png"
+
+[display]
+
+use_2d_pixel_snap=true
+width=1280
+height=720
 
 [editor_plugins]
 
 enabled=["spritefont_importer"]
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
+
+[render]
+
+mipmap_policy=2
