Edit UI actions to match the game standards

--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -19,6 +19,12 @@ enabled=["spritefont_importer"]
 filter=false
 gen_mipmaps=false
 
+[input]
+
+ui_accept=[key(Return), jbutton(0, 0)]
+ui_up=[key(Up), jbutton(0, 12), jaxis(0, 2)]
+ui_down=[key(Down), jbutton(0, 13), jaxis(0, 3)]
+
 [render]
 
 mipmap_policy=2
