Add key list to controls page
This adds a dummy list to make the paging and scrolling work.

--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -24,6 +24,8 @@ gen_mipmaps=false
 ui_accept=[key(Return), jbutton(0, 0)]
 ui_up=[key(Up), jbutton(0, 12), jaxis(0, 2)]
 ui_down=[key(Down), jbutton(0, 13), jaxis(0, 3)]
+page_screen_left=[key(Shift)]
+page_screen_right=[key(Slash)]
 
 [render]
 
