--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -22,10 +22,25 @@ gen_mipmaps=false
 [input]
 
 ui_accept=[key(Return), jbutton(0, 0)]
-ui_up=[key(Up), jbutton(0, 12), jaxis(0, 2)]
-ui_down=[key(Down), jbutton(0, 13), jaxis(0, 3)]
-page_screen_left=[key(Shift)]
-page_screen_right=[key(Slash)]
+ui_up=[key(Up), jbutton(0, 12)]
+ui_down=[key(Down), jbutton(0, 13)]
+main_menu=[key(Tab), jbutton(0, 11)]
+char_screen=[key(Space), jbutton(0, 3)]
+exit_game=[key(Escape), jbutton(0, 10)]
+take_view=[key(Control), jbutton(0, 3)]
+drop=[key(D), jbutton(0, 2)]
+move_up=[key(Up), jbutton(0, 12)]
+move_down=[key(Down), jbutton(0, 13)]
+move_left=[key(Left), jbutton(0, 14)]
+move_right=[key(Right), jbutton(0, 15)]
+decrease=[key(Left), jbutton(0, 14)]
+increase=[key(Right), jbutton(0, 15)]
+target_up=[key(Up), jbutton(0, 12)]
+target_down=[key(Down), jbutton(0, 13)]
+active_char_left=[key(Left), jbutton(0, 14)]
+active_char_right=[key(Right), jbutton(0, 15)]
+page_screen_left=[key(Shift), jbutton(0, 6)]
+page_screen_right=[key(Slash), jbutton(0, 7)]
 
 [render]
 
