Add a basic XNA XML Map importer plugin
Builds on basis XML parser to make a generic tool for all XML assets. This
already imports a map XML file with the TileMaps.

Also remove the tools folder, since xml_tools became a plugin.

--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -12,7 +12,7 @@ height=720
 
 [editor_plugins]
 
-enabled=["spritefont_importer", "tileset_importer"]
+enabled=["spritefont_importer", "tileset_importer", "xml_tools"]
 
 [image_loader]
 
